created small example

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "^3.4.0",
+    "remix-auth-google": "^1.2.0",
+    "remix-auth-oauth2": "^1.7.0",
     "surrealdb.js": "^0.8.0"
   },
   "devDependencies": {
